tests/ui/invalid-attribute/expected
error: the `stub` attribute also requires the `#[kani::proof]` attribute\
attrs.rs
|\
| #[kani::stub(invalid=opt)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^\
|

error: attribute `kani::stub` takes two path arguments; found argument that is not a path\
attrs.rs
|\
| #[kani::stub(invalid=opt)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^\
|

error: unknown attribute `invalid::attribute`\
attrs.rs\
|\
| #[kanitool::invalid::attribute]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unexpected argument for `proof`\
attrs.rs\
|\
| #[kanitool::proof(invalid_argument)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\
|

